2014-05-10  Kaz Kylheku  <kaz@kylheku.com>

	Version 89

	* txr.c (version): Bumped.

	* txr.1: Bumped version, set date.

	* configure (txr_ver): Bumped. 

	* txr.spec: Bumped version.

	* RELNOTES: Updated

2014-05-10  Kaz Kylheku  <kaz@kylheku.com>

	String type related bugfixes: neglecting to handle all three kinds in
	some places. In particular, the test case

	  echo : | ./txr -c '@a:@a' -

	breaks because of neglected LIT in do_match_line.

	* arith.c (tofloat, toint): Handle LIT type in switch.

	* lib.c (ref, refset, replace, update): Handle LSTR type.

	* match.c (do_match_line, do_output_line): Handle LSTR and LIT
	objects in switch.

2014-04-14  Kaz Kylheku  <kaz@kylheku.com>

	* stream.c (get_line, get_char, get_byte): Fix outdated, incorrect
	optional argument defaulting logic.

2014-04-13  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c, gc.c, rand.c, regex.c, signal.c: Remove inclusion of unneeded
	headers.

2014-04-11  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (make_var_shadowing_env): Remove unnecessary test for
	colon symbol.

2014-04-08  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (rangev_func, range_star_v_func): Use numeric
	equivalence comparison for end test, rather than eql.

2014-04-07  Kaz Kylheku  <kaz@kylheku.com>

	* lib.c (eql): Bugfix: not handling floating-point types!
	Two objects which are equal floating-point values must be considered
	eql even if they are distinct objects (not eq).

2014-04-04  Kaz Kylheku  <kaz@kylheku.com>

	Version 88

	* txr.c (version): Bumped.

	* txr.1: Bumped version, set date.

	* configure (txr_ver): Bumped. Generational GC is now
	enabled by default.

	* txr.spec: Bumped version.

	* RELNOTES: Updated

	* txr.vim: Regenerated.

2014-03-29  Kaz Kylheku  <kaz@kylheku.com>

	* gc.c (CHECKOBJ_VEC_SIZE, FRESHOBJ_VEC_SIZE): Increase
	to 8 * HEAP_SIZE from 2 * HEAP_SIZE to reduce frequency
	of garbage collections.

2014-03-29  Kaz Kylheku  <kaz@kylheku.com>
